--- a/views/admin/trajet.shadow.html
+++ b/views/admin/trajet.shadow.html
@@ -68,6 +68,40 @@
                 </table>
             </div>
         </div>
+        <div class="col-md-10 shadow-lg p-4 m-3">
+            <div class="mb-3">
+                <button class="btn btn-primary" data-toggle="modal" data-target="#addTrajet"><i class="fas fa-plus"></i>
+                    Créer un trajet
+                </button>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-striped-columns
+                        table-bordered">
+                    <thead>
+                        <caption>Trajet</caption>
+                        <tr>
+                            <th>Départ</th>
+                            <th>Heure de d'arrivée</th>
+                            <th>Destination</th>
+                            <th>Heure de d'arrivée</th>
+                            <th>Prix</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-group-divider">
+                        {% foreach ($villes_arrive as $arrive): %}
+                        <tr>
+                            <td scope="row">{{$arrive["ville"]}}</td>
+                            <td>{{$arrive["reached_time"]}}</td>
+        
+                        </tr>
+                        {% endforeach %}
+                    </tbody>
+                    <tfoot>
+        
+                    </tfoot>
+                </table>
+            </div>
+        </div>
       </div>
 </div>
 
@@ -129,6 +163,52 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="addTrajet" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog"
+    aria-labelledby="addTrajetId" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-md" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addTrajetId">Créer un trajet</h5>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post" action="/api/add-trajet">
+                    <div class="form-group">
+                        <label> Ville de départ </label>
+                        <input type="text" name="ville_depart" list="ville_depart"  class="form-control" placeholder="Ville de départ">
+                        <datalist id="ville_depart">{% foreach ($villes_depart as $depart): %}
+                        <option value="{{$depart["ville"]}}"></option>
+                        {% endforeach %}
+
+                        </datalist>
+                    </div>
+                    <div class="form-group">
+                        <label>Ville d'arrivée</label>
+                        <input type="text" name="ville_arrive" list="ville_arrive" class="form-control"
+                            placeholder="Heure d'arrivée">
+                            <datalist id="ville_arrive">
+                                {% foreach ($villes_arrive as $arrive): %}
+                                <option value="{{$arrive["ville"]}}"></option>
+                                {% endforeach %}
+                            </datalist>
+                    </div>
+                    <div class="form-group">
+                      <label for="price" class="form-label">Prix</label>
+                      <input type="text"
+                        class="form-control" name="prix" id="price" aria-describedby="helpId" placeholder="prix">
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Enregistrer</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Optional: Place to the bottom of scripts -->
 <script>
