--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import '../node_modules/react-datalist-input/dist/styles.css'
