--- a/views/admin/login.shadow.html
+++ b/views/admin/login.shadow.html
@@ -33,15 +33,15 @@
             <h3>Admin </h3>
              <p>connecter vous a votre compte</p>
             </div>
-            <form action="#" method="post">
+            <form action="/api/login" method="post">
               <div class="form-group first">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username">
+                <label for="username">Nom d'utilisateur</label>
+                <input type="text" name="phone" class="form-control" id="username">
 
               </div>
               <div class="form-group last mb-4">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
+                <label for="password">Mot de passe</label>
+                <input type="password" name="password" class="form-control" id="password">
                 
               </div>
               
