--- a/views/admin/login.shadow.html
+++ b/views/admin/login.shadow.html
@@ -14,7 +14,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>ADMIN LOGIN</title>
+    <title>LOGIN</title>
   </head>
   <body>
   
@@ -30,7 +30,7 @@
           <div class="row justify-content-center">
             <div class="col-md-8">
               <div class="mb-4">
-            <h3>Admin </h3>
+            <h3>Bienvenu </h3>
              <p>connecter vous a votre compte</p>
             </div>
             <form action="/api/login" method="post">
